--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,6 @@
 ;addopts	= -s --reruns 2
 addopts	= -s --alluredir report
 testpaths = ./scripts
-python_files = test_05.py
-python_classes = Test_10
-python_functions = test_*
+;python_files = test_*.py
+;python_classes = Test_*
+;python_functions = test_*
